<resources>
    <string name="app_name">CCApplication</string>
    <string name="productCode">Product code:</string>
    <string name="allergens">Allergens:</string>
    <string name="brands">Brands:</string>
    <string name="categories">Categories:</string>
    <string name="productName">Name:</string>
    <string name="expirationDate">Expiration date:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="labels">Labels:</string>
    <string name="purchasePlace">Purchase place: </string>
    <string name="quantity">Quantity:</string>
    <string name="image">Product Image</string>
    <string name="nutriments">Nutriments:</string>
    <string name="codeLabel">Code:</string>
    <string name="productDetails">Product details:</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="ConfirmButtonText">Confirm</string>
    <string name="MassGrow">Gain body mass</string>
    <string name="MassReduction">Reduce body mass</string>
    <string name="TargetText">What you want to achieve?</string>
    <string name="FieldsNotRequired">Fields below are optional</string>
    <string name="GenderText">Biological gender</string>
    <string name="HeightText">Height</string>
    <string name="WeightText">Weight</string>
    <string name="PPMTitleText">Daily calories requirement</string>
    <string name="AgeText">Age</string>
    <string name="GenderMale">Male</string>
    <string name="GenderFemale">Female</string>
    <string name="MissingRequiredData">Enter all required data</string>
    <string name="LittleOrNoActivity">"0–1 day/week "</string>
    <string name="LightlyActivity">1–3 days/week</string>
    <string name="ModeratelyActivity">3–5 days/week</string>
    <string name="Active">6–7 days/week</string>
    <string name="VeryActive">Hard exercise 6–7 days/week</string>
    <string name="ActivityFrequency">Frequency of activity</string>
    <string name="calculateRequirementLabel">Calculate daily requirement</string>
    <string name="registerWaterText">Register</string>
    <string name="glassesOfWater">Water: %d glasses</string>
    <string name="addMacroButton">Add Macro</string>
    <string name="saveProductButton">Save product</string>
    <string name="macroInfo">Info: nutriments are given for 100 g of product.</string>
    <string name="submit">Submit</string>
    <string name="addWaterAmountLabel">How many water glasses have you drank?</string>
    <string name="setDailyWaterRequirement">Set daily water glasses requirement</string>
    <string name="channel_name">Water channel name</string>
    <string name="channel_description">Channel</string>
    <string name="waterNotificationText">Remember to stay hydrated</string>
    <string name="waterNotificationBigText">Remember to stay hydrated. We haven\'t seen you registering any water ammount for a while.</string>
    <string name="registerOneGlass">Add one glass</string>
    <string name="title_activity_adding_serving">AddingServingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="my_meals">My meals</string>
    <string name="scan">Scan product</string>
    <string name="nullCategory">No category</string>
    <string name="amount">Amount</string>
    <string name="new_meal">New meal</string>
    <string name="name">Name:</string>
    <string name="desc">Desc:</string>
    <string name="category">Category</string>
    <string name="calories">Calories:</string>
    <string name="carbohydrates">Carbohydrates:</string>
    <string name="proteins">Proteins:</string>
    <string name="fats">Fats:</string>
    <string name="add_meal">Add meal</string>
    <string name="stepsMade">Steps: %d / %d</string>
    <string name="distanceMade">Total distance today: %.2f m</string>
    <string name="caloriesBurnt">Calories burnt: ~ %.2f kcal</string>
    <string name="setDailyStepTarget">Set target</string>
    <string name="date">"Date: "</string>
    <string name="checkProgress">Check progress</string>
    <string name="somethingWrongWithDate">Sorry, there was a problem with date</string>
    <string name="age">Age: %d</string>
    <string name="progressTitle">Measurement history</string>
    <string name="setDailyCaloriesRequirementManually">Set daily macro nutrients requirement</string>
    <string name="distanceDetails">Distance: %.2f meters</string>
    <string name="unableToLoadStepsHistory">Unable to open steps history, restart application and try again!</string>
    <string name="totalDistanceEverMade">Total distance made: %.2f (km)</string>
    <string name="totalStepsEverMade">Total steps made: %d </string>
    <string name="dateDetails">Date: %s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="loadDayob">Load day obj from DB</string>
    <string name="manageCategories">Manage categories</string>
    <string name="manageMeals">Manage meals</string>
    <string name="suggestedMeals">Suggested meals</string>
    <string name="mealDetails">Meal details:</string>
    <string name="openBrowser">Open browser</string>
    <string name="servings">Servings</string>
    <string name="newMealNavigation">Add New Meal</string>
    <string name="stepsHistoryNavigation">Steps History</string>
    <string name="scanProductNavigation">Scan Product Code</string>
    <string name="addServingNavigation">Add Serving</string>
    <string name="dailyRequirementsNavigation">Daily Requirements</string>
    <string name="userParametersNavigation">User Parameters</string>
    <string name="calculateCaloriesNavigation">Calculate Calories</string>
    <string name="eatenCalories">Calories: \n %.2f / %.2f kcal</string>
    <string name="eatenProteins">Proteins: \n %.2f / %.2f g</string>
    <string name="eatenCarbohydrates">Carbohydrates: \n %.2f / %.2f g</string>
    <string name="eatenFats">Fats: \n %.2f / %.2f g</string>
    <string name="caloriesProgress">%d / %d kcal</string>
    <string name="name_of_meal">name...</string>
    <string name="steps">steps...</string>
</resources>