<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CalculateCaloriesRequirement">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/inner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/PPMTitleLabel"
                style="@style/view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PPMTitleText" />

            <TextView
                android:id="@+id/AgeLabel"
                style="@style/labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AgeText" />

            <EditText
                android:id="@+id/AgeInput"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/WeightLabel"
                style="@style/labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/WeightText" />

            <EditText
                android:id="@+id/WeightInput"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/HeightLabel"
                style="@style/labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HeightText" />

            <EditText
                android:id="@+id/HeightInput"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/Gender"
                style="@style/labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GenderText" />

            <RadioGroup
                android:id="@+id/GenderOptions"
                style="@style/radio_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/MaleButton"
                    style="@style/radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GenderMale" />

                <RadioButton
                    android:id="@+id/FemaleButton"
                    style="@style/radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GenderFemale" />

            </RadioGroup>

            <TextView
                android:id="@+id/ActivityLabel"
                style="@style/labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ActivityFrequency" />

            <Spinner
                android:id="@+id/ActivityRateSpinner"
                style="@style/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/FieldsNotRequired"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FieldsNotRequired" />

            <TextView
                android:id="@+id/Targetlabel"
                style="@style/labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TargetText" />

            <RadioGroup
                android:id="@+id/TargetOptions"
                style="@style/radio_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/MassReduction"
                    style="@style/radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MassReduction" />

                <RadioButton
                    android:id="@+id/MassGrow"
                    style="@style/radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MassGrow" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/CancelCalculationButton"
                    style="@style/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CancelButtonText"
                    android:textAppearance="@style/ButtonText"
                    android:theme="@style/AccentButton"
                    app:cornerRadius="25dp"/>

                <Button
                    android:id="@+id/ConfirmDataButton"
                    style="@style/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ConfirmButtonText"
                    android:textAppearance="@style/ButtonText"
                    android:theme="@style/AccentButton"
                    app:cornerRadius="25dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>