<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activities.ScannedProductDetailsActivity">

        <ImageView
            android:id="@+id/productImageView"
            android:layout_width="126dp"
            android:layout_height="163dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mealDetails"
            android:textColor="#00F0FF"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/productName"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />



        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:text="@string/name_of_meal"
            app:layout_constraintEnd_toStartOf="@+id/productImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/openBrowser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageView">

        <TextView
            android:id="@+id/summaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:padding="5dp"
            android:text="@string/steps" />
    </ScrollView>

    <Button
        android:id="@+id/saveProductButton"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:text="@string/saveProductButton"
        android:textColor="#00F0FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryTextView"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/openBrowser"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:text="@string/openBrowser"
        android:textColor="#00F0FF"
        app:layout_constraintBottom_toTopOf="@+id/saveProductButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summaryTextView"
        app:layout_constraintVertical_bias="0.957" />

</androidx.constraintlayout.widget.ConstraintLayout>